--- a/comicsdb/templates/comicsdb/contact-success.html
+++ b/comicsdb/templates/comicsdb/contact-success.html
@@ -1,7 +1,5 @@
 {% extends parent_template|default:"base.html" %}
-
-{% block title %}Contact{% endblock title %}
-
-{% block content %}
-  <div class="notification">{{ msg }}</div>
-{% endblock %}
+{% block title %}
+    Contact
+{% endblock title %}
+{% block content %}<div class="notification">{{ msg }}</div>{% endblock %}
