--- a/comicsdb/templates/comicsdb/model_with_attribution_form.html
+++ b/comicsdb/templates/comicsdb/model_with_attribution_form.html
@@ -1,230 +1,181 @@
 {% extends parent_template|default:"base.html" %}
 {% load static %}
 {% load bulma_tags %}
-
-{% block title %}Form{% endblock title %}
-
+{% block title %}
+    Form
+{% endblock title %}
 {% block headscripts %}
-  <script src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
-  {{ form.media.css }}
+    <script src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+    {{ form.media.css }}
 {% endblock %}
-
 {% block content %}
-  <header class="block has-text-centered">
-    <h1 class="title">{{ title }}</h1>
-  </header>
-  <form method="post" enctype="multipart/form-data" id="mainForm">
-    {% csrf_token %}
-    <!-- main -->
-    {% if form.errors %}
-      {% for field in form %}
-        {% for error in field.errors %}
-          <div class="notification is-danger">
-            <strong>{{ error|escape }}</strong>
-          </div>
-        {% endfor %}
-      {% endfor %}
-      {% for error in form.non_field_errors %}
-        <div class="notification is-danger">
-          <strong>{{ error|escape }}</strong>
-        </div>
-      {% endfor %}
-    {% endif %}
-    {% for field in form.hidden_fields %}
-      {{ field }}
-    {% endfor %}
-    {% for field in form.visible_fields %}
-      <div class="field" data-field-name="{{ field.name }}">
-        {% if field|is_field_type:'checkbox' %}
-          <div class="control">
-            <div class="columns">
-              <div class="column">
-                {% if field.auto_id %}
-                  <label class="checkbox{% if field.field.required %} {{ form.required_css_class }}{% endif %}">
-                    {{ field }} {{ field.label }}
-                  </label>
-                {% endif %}
+    <header class="block has-text-centered">
+        <h1 class="title">{{ title }}</h1>
+    </header>
+    <form method="post" enctype="multipart/form-data" id="mainForm">
+        {% csrf_token %}
+        <!-- main -->
+        {% if form.errors %}
+            {% for field in form %}
                 {% for error in field.errors %}
-                  <span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>
+                    <div class="notification is-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
                 {% endfor %}
-                {% if field.help_text %}
-                  <p class="help">
-                    {{ field.help_text|safe }}
-                  </p>
-                {% endif %}
-              </div>
-            </div>
-          </div>
-        {% elif field|is_field_type:'radio' %}
-          {% if field.auto_id %}
-            <label
-              class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
-          {% endif %}
-          <div class="control">
-            <div class="columns">
-              <div class="column">
-                {% for choice in field %}
-                  <label class="radio">
-                    {{ choice.tag }}
-                    {{ choice.choice_label }}
-                  </label>
-                {% endfor %}
-              </div>
-            </div>
-            {% for error in field.errors %}
-              <span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>
             {% endfor %}
-            {% if field.help_text %}
-              <p class="help">
-                {{ field.help_text|safe }}
-              </p>
-            {% endif %}
-          </div>
-        {% elif field|is_field_type:"select" %}
-          <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
-                 for="{{ field.id_for_label }}">{{ field.label }}</label>
-          <div class="control">
-            <div class="columns is-form-field Select">
-              <div class="column">
-                <span
-                  class="select{% if field|is_multiple %} is-multiple{% endif %}{% if field.errors|length > 0 %} is-danger{% endif %} is-fullwidth">
-                  {{ field }}
-                </span>
-                {% for error in field.errors %}
-                  <span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>
-                {% endfor %}
-                {% if field.help_text %}
-                  <p class="help">
-                    {{ field.help_text|safe }}
-                  </p>
-                {% endif %}
-              </div>
-            </div>
-          </div>
-        {% elif field|is_field_type:"textarea" %}
-          <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
-                 for="{{ field.id_for_label }}">{{ field.label }}</label>
-          <div class="control">
-            {{ field|add_field_class:'textarea' }}
-            {% for error in field.errors %}
-              <span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>
-            {% endfor %}
-            {% if field.help_text %}
-              <p class="help">
-                {{ field.help_text|safe }}
-              </p>
-            {% endif %}
-          </div>
-        {% elif field|is_field_type:'input' %}
-          <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
-                 for="{{ field.id_for_label }}">{{ field.label }}</label>
-          <div class="control">
-            {% if field|is_field_type:'split_dt' %}
-              {{ field|set_input_type|add_field_class:'input' }}
-            {% elif field|is_field_type:'any_datetime' %}
-              {{ field|set_input_type|add_field_class:'input' }}
-            {% else %}
-              {{ field|add_field_class:'input' }}
-            {% endif %}
-            {% for error in field.errors %}
-              <span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>
-            {% endfor %}
-            {% if field.help_text %}
-              <p class="help">
-                {{ field.help_text|safe }}
-              </p>
-            {% endif %}
-          </div>
-        {% else %}
-          {% if field.auto_id %}
-            <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
-                   for="{{ field.auto_id }}">{{ field.label }}</label>
-          {% endif %}
-          <div class="control{% if field|is_multiple %} multiple-checkbox{% endif %}">
-            {{ field }}
-            {% for error in field.errors %}
-              <span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>
-            {% endfor %}
-            {% if field.help_text %}
-              <p class="help">
-                {{ field.help_text|safe }}
-              </p>
-            {% endif %}
-          </div>
-        {% endif %}
-      </div>
-    {% endfor %}
-    <!-- end main -->
-    <!-- attribution -->
-    <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth" id="attributionTable">
-      {{ attribution.management_form }}
-      {{ attribution.non_form_errors }}
-      <thead>
-      <tr>
-        <th>Source</th>
-        <th>URL</th>
-        <th>Delete</th>
-      </tr>
-      </thead>
-      {% for form in attribution.forms %}
-        <tr>
-          {% for field in form.visible_fields %}
-            <td>
-              {% if form.instance.pk %}{{ form.DELETE }}{% endif %}
-              {# Include the hidden fields in the form #}
-              {% if forloop.first %}
-                {% for hidden in form.hidden_fields %}
-                  {{ hidden }}
-                {% endfor %}
-              {% endif %}
-              {# Show error for any formset errors #}
-              {% if forloop.first %}
-                {% for error in form.non_field_errors %}
-                  <strong class="has-text-danger">{{ error }}</strong>
-                {% endfor %}
-              {% endif %}
-              {# Show errors for any fields #}
-              {% for error in field.errors %}
-                <strong class="has-text-danger">{{ error }}</strong>
-              {% endfor %}
-              <div class="field" data-field-name="{{ field.name }}">
-                <div class="control is-expanded">
-                  {% if field|is_field_type:"select" %}
-                    <span class="select{% if field.errors|length > 0 %} is-danger{% endif %} is-fullwidth">
-                                            {{ field }}
-                                        </span>
-                  {% elif field|is_field_type:'input' %}
-                    {{ field|add_field_class:"input is-fullwidth" }}
-                  {% else %}
-                    {{ field }}
-                  {% endif %}
+            {% for error in form.non_field_errors %}
+                <div class="notification is-danger">
+                    <strong>{{ error|escape }}</strong>
                 </div>
-                {% if field.help_text %}
-                  <ul>
-                    <li class="help">{{ field.help_text|safe }}</li>
-                  </ul>
+            {% endfor %}
+        {% endif %}
+        {% for field in form.hidden_fields %}{{ field }}{% endfor %}
+        {% for field in form.visible_fields %}
+            <div class="field" data-field-name="{{ field.name }}">
+                {% if field|is_field_type:'checkbox' %}
+                    <div class="control">
+                        <div class="columns">
+                            <div class="column">
+                                {% if field.auto_id %}
+                                    <label class="checkbox{% if field.field.required %} {{ form.required_css_class }}{% endif %}">
+                                        {{ field }} {{ field.label }}
+                                    </label>
+                                {% endif %}
+                                {% for error in field.errors %}<span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>{% endfor %}
+                                {% if field.help_text %}<p class="help">{{ field.help_text|safe }}</p>{% endif %}
+                            </div>
+                        </div>
+                    </div>
+                {% elif field|is_field_type:'radio' %}
+                    {% if field.auto_id %}
+                        <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
+                    {% endif %}
+                    <div class="control">
+                        <div class="columns">
+                            <div class="column">
+                                {% for choice in field %}
+                                    <label class="radio">
+                                        {{ choice.tag }}
+                                        {{ choice.choice_label }}
+                                    </label>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        {% for error in field.errors %}<span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>{% endfor %}
+                        {% if field.help_text %}<p class="help">{{ field.help_text|safe }}</p>{% endif %}
+                    </div>
+                {% elif field|is_field_type:"select" %}
+                    <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
+                           for="{{ field.id_for_label }}">{{ field.label }}</label>
+                    <div class="control">
+                        <div class="columns is-form-field Select">
+                            <div class="column">
+                                <span class="select{% if field|is_multiple %} is-multiple{% endif %}{% if field.errors|length > 0 %} is-danger{% endif %} is-fullwidth">
+                                    {{ field }}
+                                </span>
+                                {% for error in field.errors %}<span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>{% endfor %}
+                                {% if field.help_text %}<p class="help">{{ field.help_text|safe }}</p>{% endif %}
+                            </div>
+                        </div>
+                    </div>
+                {% elif field|is_field_type:"textarea" %}
+                    <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
+                           for="{{ field.id_for_label }}">{{ field.label }}</label>
+                    <div class="control">
+                        {{ field|add_field_class:'textarea' }}
+                        {% for error in field.errors %}<span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>{% endfor %}
+                        {% if field.help_text %}<p class="help">{{ field.help_text|safe }}</p>{% endif %}
+                    </div>
+                {% elif field|is_field_type:'input' %}
+                    <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
+                           for="{{ field.id_for_label }}">{{ field.label }}</label>
+                    <div class="control">
+                        {% if field|is_field_type:'split_dt' %}
+                            {{ field|set_input_type|add_field_class:'input' }}
+                        {% elif field|is_field_type:'any_datetime' %}
+                            {{ field|set_input_type|add_field_class:'input' }}
+                        {% else %}
+                            {{ field|add_field_class:'input' }}
+                        {% endif %}
+                        {% for error in field.errors %}<span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>{% endfor %}
+                        {% if field.help_text %}<p class="help">{{ field.help_text|safe }}</p>{% endif %}
+                    </div>
+                {% else %}
+                    {% if field.auto_id %}
+                        <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
+                               for="{{ field.auto_id }}">{{ field.label }}</label>
+                    {% endif %}
+                    <div class="control{% if field|is_multiple %} multiple-checkbox{% endif %}">
+                        {{ field }}
+                        {% for error in field.errors %}<span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>{% endfor %}
+                        {% if field.help_text %}<p class="help">{{ field.help_text|safe }}</p>{% endif %}
+                    </div>
                 {% endif %}
-              </div>
-            </td>
-          {% endfor %}
-        </tr>
-      {% endfor %}
-    </table>
-    <!-- end attribution -->
-    <!-- submit -->
-    <div class="field">
-      <div class="control">
-        <button class="button is-info" type="submit">Submit</button>
-      </div>
-    </div>
-    <!-- end submit -->
-  </form>
+            </div>
+        {% endfor %}
+        <!-- end main -->
+        <!-- attribution -->
+        <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth"
+               id="attributionTable">
+            {{ attribution.management_form }}
+            {{ attribution.non_form_errors }}
+            <thead>
+                <tr>
+                    <th>Source</th>
+                    <th>URL</th>
+                    <th>Delete</th>
+                </tr>
+            </thead>
+            {% for form in attribution.forms %}
+                <tr>
+                    {% for field in form.visible_fields %}
+                        <td>
+                            {% if form.instance.pk %}{{ form.DELETE }}{% endif %}
+                            {# Include the hidden fields in the form #}
+                            {% if forloop.first %}
+                                {% for hidden in form.hidden_fields %}{{ hidden }}{% endfor %}
+                            {% endif %}
+                            {# Show error for any formset errors #}
+                            {% if forloop.first %}
+                                {% for error in form.non_field_errors %}<strong class="has-text-danger">{{ error }}</strong>{% endfor %}
+                            {% endif %}
+                            {# Show errors for any fields #}
+                            {% for error in field.errors %}<strong class="has-text-danger">{{ error }}</strong>{% endfor %}
+                            <div class="field" data-field-name="{{ field.name }}">
+                                <div class="control is-expanded">
+                                    {% if field|is_field_type:"select" %}
+                                        <span class="select{% if field.errors|length > 0 %} is-danger{% endif %} is-fullwidth">{{ field }}</span>
+                                    {% elif field|is_field_type:'input' %}
+                                        {{ field|add_field_class:"input is-fullwidth" }}
+                                    {% else %}
+                                        {{ field }}
+                                    {% endif %}
+                                </div>
+                                {% if field.help_text %}
+                                    <ul>
+                                        <li class="help">{{ field.help_text|safe }}</li>
+                                    </ul>
+                                {% endif %}
+                            </div>
+                        </td>
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+        </table>
+        <!-- end attribution -->
+        <!-- submit -->
+        <div class="field">
+            <div class="control">
+                <button class="button is-info" type="submit">Submit</button>
+            </div>
+        </div>
+        <!-- end submit -->
+    </form>
 {% endblock %}
-
 {% block js %}
-  {{ form.media.js }}
-  <script src="{% static 'site/js/jquery.formset.js' %}"></script>
-  <script type="text/javascript">
+    {{ form.media.js }}
+    <script src="{% static 'site/js/jquery.formset.js' %}"></script>
+    <script type="text/javascript">
       $(function () {
           $('#mainForm #attributionTable tbody tr').formset({
               prefix: '{{ attribution.prefix }}',
@@ -232,5 +183,5 @@
               addText: 'Add another attribution',
           });
       })
-  </script>
+    </script>
 {% endblock %}
