--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,37 +1,29 @@
 {% extends 'base.html' %}
 {% load bulma_tags %}
-
 {% block title %}Enter new password{% endblock %}
-
 {% block content %}
-  <section class="section">
-    <div class="container">
-      <h1 class="title">Set a new password!</h1>
-      <form method="POST">
-        {% csrf_token %}
-        {% for field in form.visible_fields %}
-          <div class="field" data-field-name="{{ field.name }}">
-            <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
-                   for="{{ field.id_for_label }}">{{ field.label }}</label>
-            <div class="control">
-              {{ field|add_field_class:'input' }}
-              {% for error in field.errors %}
-                <span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>
-              {% endfor %}
-              {% if field.help_text %}
-                <p class="help">
-                  {{ field.help_text|safe }}
-                </p>
-              {% endif %}
-            </div>
-          </div>
-        {% endfor %}
-        <div class="field">
-          <div class="control">
-            <button class="button is-link" type="submit">Login</button>
-          </div>
+    <section class="section">
+        <div class="container">
+            <h1 class="title">Set a new password!</h1>
+            <form method="POST">
+                {% csrf_token %}
+                {% for field in form.visible_fields %}
+                    <div class="field" data-field-name="{{ field.name }}">
+                        <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
+                               for="{{ field.id_for_label }}">{{ field.label }}</label>
+                        <div class="control">
+                            {{ field|add_field_class:'input' }}
+                            {% for error in field.errors %}<span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>{% endfor %}
+                            {% if field.help_text %}<p class="help">{{ field.help_text|safe }}</p>{% endif %}
+                        </div>
+                    </div>
+                {% endfor %}
+                <div class="field">
+                    <div class="control">
+                        <button class="button is-link" type="submit">Login</button>
+                    </div>
+                </div>
+            </form>
         </div>
-      </form>
-    </div>
-  </section>
+    </section>
 {% endblock %}
