--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -3,186 +3,199 @@
 {% load is_new %}
 {% load static %}
 {% load cache %}
-
 {% block sitedesc %}
-  <meta name="description"
-        content="Metron is a comic book database. It aims to provide searchable data on comic books with a public REST API.">
+    <meta name="description"
+          content="Metron is a comic book database. It aims to provide searchable data on comic books with a public REST API.">
 {% endblock %}
-{% block sitekeywords %}
-  <meta name="keywords" content="Comics,Comic Book Database,API,REST">
-{% endblock %}
+{% block sitekeywords %}<meta name="keywords" content="Comics,Comic Book Database,API,REST">{% endblock %}
 {% block title %}Metron{% endblock %}
-
 {% block content %}
-  <!--- announcements -->
-  {% cache 1800 annoucements_cache %}
-  {% if active_announcements %}
-    {% for announcement in active_announcements %}
-      <div class="notification is-{{ announcement.display_type }}">
-        <button class="delete"></button>
-        {{ announcement.content|safe }}
-      </div>
-    {% endfor %}
-  {% endif %}
-  {% endcache %}
-  <!-- end announcements -->
-  <!-- messages -->
-  {% if messages %}
+    <!--- announcements -->
+    {% cache 1800 annoucements_cache %}
+    {% if active_announcements %}
+        {% for announcement in active_announcements %}
+            <div class="notification is-{{ announcement.display_type }}">
+                <button class="delete"></button>
+                {{ announcement.content|safe }}
+            </div>
+        {% endfor %}
+    {% endif %}
+{% endcache %}
+<!-- end announcements -->
+<!-- messages -->
+{% if messages %}
     {% for message in messages %}
-      <div class="notification is-{{ message.tags }}">
-        <button class="delete"></button>
-        {{ message|safe }}
-      </div>
+        <div class="notification is-{{ message.tags }}">
+            <button class="delete"></button>
+            {{ message|safe }}
+        </div>
     {% endfor %}
-  {% endif %}
-  <!-- end messages -->
-  <!-- header-->
-  <header class="block has-text-centered">
+{% endif %}
+<!-- end messages -->
+<!-- header-->
+<header class="block has-text-centered">
     <h1 class="title">Metron</h1>
     <h2 class="subtitle">Comic Book Database</h2>
-  </header>
-  <!-- end header-->
-  <!-- icons -->
-  <div class="level is-mobile">
+</header>
+<!-- end header-->
+<!-- icons -->
+<div class="level is-mobile">
     <div class="level-item has-text-centered">
-      <div>
-        <p class="title has-text-weight-normal"><span class="icon"><i class="fas fa-book-open"></i></span></p>
-        <p class="heading">Comic Book Database</p>
-      </div>
+        <div>
+            <p class="title has-text-weight-normal">
+                <span class="icon"><i class="fas fa-book-open"></i></span>
+            </p>
+            <p class="heading">Comic Book Database</p>
+        </div>
     </div>
     <div class="level-item has-text-centered">
-      <div>
-        <p class="title has-text-weight-normal"><span class="icon"><i class="fas fa-satellite-dish"></i></span></p>
-        <p class="heading">REST API</p>
-      </div>
+        <div>
+            <p class="title has-text-weight-normal">
+                <span class="icon"><i class="fas fa-satellite-dish"></i></span>
+            </p>
+            <p class="heading">REST API</p>
+        </div>
     </div>
     <div class="level-item has-text-centered">
-      <div>
-        <p class="title has-text-weight-normal"><span class="icon"><i class="fas fa-users"></i></span></p>
-        <p class="heading">Community</p>
-      </div>
+        <div>
+            <p class="title has-text-weight-normal">
+                <span class="icon"><i class="fas fa-users"></i></span>
+            </p>
+            <p class="heading">Community</p>
+        </div>
     </div>
-  </div>
-  <!-- end icons -->
-  <!-- info -->
-  <div class="tile is-ancestor">
+</div>
+<!-- end icons -->
+<!-- info -->
+<div class="tile is-ancestor">
     <div class="tile is-7 is-parent is-vertical">
-      <article class="tile is-child notification is-info">
-        <div class="columns">
-          <div class="column is-narrow is-hidden-mobile">
-            <figure class="block is-w-xl">
-              <img src="{% static 'site/img/metron-300.png' %}" alt="Metron logo">
-            </figure>
-          </div>
-          <div>
-            <p class="title">What is Metron?</p>
+        <article class="tile is-child notification is-info">
+            <div class="columns">
+                <div class="column is-narrow is-hidden-mobile">
+                    <figure class="block is-w-xl">
+                        <img src="{% static 'site/img/metron-300.png' %}" alt="Metron logo">
+                    </figure>
+                </div>
+                <div>
+                    <p class="title">What is Metron?</p>
+                    <p class="content">
+                        <strong>Metron</strong> is a community-based site whose goal is to build an open database
+                        with a <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">REST</a> API for comic
+                        books.
+                    </p>
+                    <p class="content">
+                        Currently, the only comic book database the provides a REST API for users is
+                        <a href="https://comicvine.gamespot.com/">Comic Vine</a>. Unfortunately, since it's a corporately-owned
+                        service, the community that uses it has no control over the amount of resources provided to maintain it
+                        or ensure it's continued accessibility.
+                    </p>
+                </div>
+            </div>
+        </article>
+        <article class="tile is-child notification is-warning">
+            <p class="title">Using the REST API</p>
             <p class="content">
-              <strong>Metron</strong> is a community-based site whose goal is to build an open database
-              with a <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">REST</a> API for comic
-              books.
+                If you want to use the data from Metron, there is a <a href="https://www.python.org/">Python</a> wrapper
+                called <a href="https://github.com/Metron-Project/mokkari">Mokkari</a> to make it easy to use the API.
             </p>
+            <p class="content">Want to tag your comic archives with metadata from Metron? You can use the following project:</p>
+            <div class="content">
+                <ul>
+                    <li>
+                        <a href="https://github.com/Metron-Project/metron-tagger">Metron-Tagger</a>
+                    </li>
+                </ul>
+            </div>
             <p class="content">
-              Currently, the only comic book database the provides a REST API for users is
-              <a href="https://comicvine.gamespot.com/">Comic Vine</a>. Unfortunately, since it's a corporately-owned
-              service, the community that uses it has no control over the amount of resources provided to maintain it
-              or ensure it's continued accessibility.
+                For further information on the API, please refer to the <a href="{% url 'flatpage:api-guidelines' %}">API Guidelines</a>.
             </p>
-          </div>
-        </div>
-      </article>
-      <article class="tile is-child notification is-warning">
-        <p class="title">Using the REST API</p>
-        <p class="content">
-          If you want to use the data from Metron, there is a <a href="https://www.python.org/">Python</a> wrapper
-          called <a href="https://github.com/Metron-Project/mokkari">Mokkari</a> to make it easy to use the API.
-        </p>
-        <p class="content">
-          Want to tag your comic archives with metadata from Metron? You can use the following project:
-        </p>
-        <div class="content">
-          <ul>
-            <li><a href="https://github.com/Metron-Project/metron-tagger">Metron-Tagger</a></li>
-          </ul>
-        </div>
-
-        <p class="content">For further information on the API, please refer to the <a
-          href="{% url 'flatpage:api-guidelines' %}">API Guidelines</a>.</p>
-      </article>
+        </article>
     </div>
     <div class="tile is-5 is-parent is-vertical">
-      <article class="tile is-child notification is-primary">
-        <p class="title">Want to Contribute?</p>
-        <p class="content">
-          If you want to add information to Metron, sign-up for an account and read the
-          <a href="{% url 'flatpage:editing-guidelines' %}">Editing Guidelines</a>
-          before starting.
-        </p>
-        <p class="content">
-          Want to help with the technical side of Metron? Metron is built with
-          <a href="https://www.djangoproject.com/">Django</a>, so if you have knowledge of Python and Django head over
-          to <a href="https://github.com/bpepple/metron">GitHub</a> to check out the sites code.
-        </p>
-      </article>
-      <article class="tile is-child notification is-danger">
-        <p class="title">Questions?</p>
-        <p class="content">
-          Have questions not covered here or suggestions? If so, feel free to contact us at either of these places:
-        </p>
-        <div class="content">
-          <ul>
-            <li><a href="https://matrix.to/#/#metrondb:matrix.org">Matrix Chat</a></li>
-            <li><a href="https://github.com/bpepple/metron/discussions">GitHub Discussions</a></li>
-            <li><a href="mailto:bpepple@metron.cloud">Email Site Admin</a></li>
-          </ul>
-        </div>
-      </article>
+        <article class="tile is-child notification is-primary">
+            <p class="title">Want to Contribute?</p>
+            <p class="content">
+                If you want to add information to Metron, sign-up for an account and read the
+                <a href="{% url 'flatpage:editing-guidelines' %}">Editing Guidelines</a>
+                before starting.
+            </p>
+            <p class="content">
+                Want to help with the technical side of Metron? Metron is built with
+                <a href="https://www.djangoproject.com/">Django</a>, so if you have knowledge of Python and Django head over
+                to <a href="https://github.com/bpepple/metron">GitHub</a> to check out the sites code.
+            </p>
+        </article>
+        <article class="tile is-child notification is-danger">
+            <p class="title">Questions?</p>
+            <p class="content">
+                Have questions not covered here or suggestions? If so, feel free to contact us at either of these places:
+            </p>
+            <div class="content">
+                <ul>
+                    <li>
+                        <a href="https://matrix.to/#/#metrondb:matrix.org">Matrix Chat</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/bpepple/metron/discussions">GitHub Discussions</a>
+                    </li>
+                    <li>
+                        <a href="mailto:bpepple@metron.cloud">Email Site Admin</a>
+                    </li>
+                </ul>
+            </div>
+        </article>
     </div>
-  </div>
-  <!-- end info-->
-  <!-- recently edited issues -->
-  <div class="box">
+</div>
+<!-- end info-->
+<!-- recently edited issues -->
+<div class="box">
     <header class="block">
-      <p class="title is-4">Recently Edited Issues</p>
-      <p class="subtitle is-7">Last updated at: {{ updated }}</p>
+        <p class="title is-4">Recently Edited Issues</p>
+        <p class="subtitle is-7">Last updated at: {{ updated }}</p>
     </header>
     <div class="columns is-multiline">
-      {% for issue in recently_edited %}
-        <div class="column is-one-quarter">
-          <!-- issue card-->
-          <div class="card">
-            <!-- card header -->
-            <header class="card-header">
-              {% with issue.created_on|is_new as is_new %}
-                <p class="card-header-title is is-centered">
-                  {{ issue }}{% if is_new %}&nbsp;<span class="tag is-primary is-rounded">New!</span>{% endif %}
-                </p>
-              {% endwith %}
-            </header>
-            <!-- end card header -->
-            <!-- card image -->
-            <div class="card-image">
-              <figure class="image is-2by3">
-                {% if issue.image %}
-                  {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
-                    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ issue }}">
-                  {% endthumbnail %}
-                {% else %}
-                  <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
-                {% endif %}
-              </figure>
+        {% for issue in recently_edited %}
+            <div class="column is-one-quarter">
+                <!-- issue card-->
+                <div class="card">
+                    <!-- card header -->
+                    <header class="card-header">
+                        {% with issue.created_on|is_new as is_new %}
+                            <p class="card-header-title is is-centered">
+                                {{ issue }}
+                                {% if is_new %}&nbsp;<span class="tag is-primary is-rounded">New!</span>{% endif %}
+                            </p>
+                        {% endwith %}
+                    </header>
+                    <!-- end card header -->
+                    <!-- card image -->
+                    <div class="card-image">
+                        <figure class="image is-2by3">
+                            {% if issue.image %}
+                                {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
+                                    <img src="{{ im.url }}"
+                                         width="{{ im.width }}"
+                                         height="{{ im.height }}"
+                                         alt="{{ issue }}">
+                                {% endthumbnail %}
+                            {% else %}
+                                <img src="{% static 'site/img/image-not-found.webp' %}"
+                                     alt="No image for {{ issue }}">
+                            {% endif %}
+                        </figure>
+                    </div>
+                    <!-- end card image -->
+                    <!-- card footer -->
+                    <footer class="card-footer">
+                        <p class="card-footer-item">{{ issue.cover_date|date:"M Y" }}</p>
+                        <a href="{% url 'issue:detail' issue.slug %}" class="card-footer-item">Info</a>
+                    </footer>
+                    <!-- end card footer -->
+                </div>
+                <!-- end issue card -->
             </div>
-            <!-- end card image -->
-            <!-- card footer -->
-            <footer class="card-footer">
-              <p class="card-footer-item">{{ issue.cover_date|date:"M Y" }}</p>
-              <a href="{% url 'issue:detail' issue.slug %}" class="card-footer-item">Info</a>
-            </footer>
-            <!-- end card footer -->
-          </div>
-          <!-- end issue card -->
-        </div>
-      {% endfor %}
+        {% endfor %}
     </div>
-  </div>
-  <!-- end recent issues -->
+</div>
+<!-- end recent issues -->
 {% endblock %}
