--- a/comicsdb/templates/comicsdb/pagination.html
+++ b/comicsdb/templates/comicsdb/pagination.html
@@ -1,68 +1,79 @@
-  {% if is_paginated %}
-  <nav class="pagination is-centered" role="navigation" aria-label="pagination">
-    {% if page_obj.has_previous %}
-      <a class="pagination-previous" href="?page={{ page_obj.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">Previous</a>
-    {% else %}
-      <a class="pagination-previous" title="This is the first page" disabled>Previous</a>
-    {% endif %}
-    {% if page_obj.has_next %}
-      <a class="pagination-next" href="?page={{ page_obj.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">Next page</a>
-    {% else %}
-      <a class="pagination-next" title="This is the last page" disabled>Next page</a>
-    {% endif %}
-
-    <ul class="pagination-list">
-      {% if page_obj.number > 1 %}
-        <li><a class="pagination-link" href="?page=1{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}" aria-label="Goto page 1">1</a></li>
-      {% endif %}
-
-      {% if page_obj.number  > 2 %}
-        {% if page_obj.number > 3 %}
-          <li><span class="pagination-ellipsis">&hellip;</span></li>
-          <li>
-            <a class="pagination-link" href="?page={{ page_obj.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}" aria-label="Goto page {{page_obj.previous_page_number}}">
-              {{page_obj.previous_page_number}}
-            </a>
-          </li>
+{% if is_paginated %}
+    <nav class="pagination is-centered"
+         role="navigation"
+         aria-label="pagination">
+        {% if page_obj.has_previous %}
+            <a class="pagination-previous"
+               href="?page={{ page_obj.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">Previous</a>
         {% else %}
-          <li>
-            <a class="pagination-link" href="?page={{ page_obj.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}" aria-label="Goto page {{page_obj.previous_page_number}}">
-              {{page_obj.previous_page_number}}
-            </a>
-          </li>
+            <a class="pagination-previous" title="This is the first page" disabled>Previous</a>
         {% endif %}
-      {% endif %}
-
-      <li>
-        <a class="pagination-link is-current" aria-label="Page {{ page_obj.number }}" aria-current="page">
-          {{ page_obj.number }}
-        </a>
-      </li>
-
-      {% if page_obj.next_page_number < paginator.num_pages %}
-        {% if page_obj.next_page_number < paginator.num_pages|add:'-1' %}
-          <li>
-            <a class="pagination-link" href="?page={{ page_obj.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}" aria-label="Goto page {{ page_obj.next_page_number }}">
-              {{ page_obj.next_page_number}}
-            </a>
-          </li>
-          <li><span class="pagination-ellipsis">&hellip;</span></li>
+        {% if page_obj.has_next %}
+            <a class="pagination-next"
+               href="?page={{ page_obj.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">Next page</a>
         {% else %}
-          <li>
-            <a class="pagination-link" href="?page={{ page_obj.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}" aria-label="Goto page {{ page_obj.next_page_number }}">
-              {{ page_obj.next_page_number}}
-            </a>
-          </li>
+            <a class="pagination-next" title="This is the last page" disabled>Next page</a>
         {% endif %}
-      {% endif %}
-
-      {% if page_obj.number < paginator.num_pages %}
-        <li>
-          <a class="pagination-link" href="?page={{ paginator.num_pages }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}" aria-label="Goto page {{ paginator.num_pages }}">
-            {{ paginator.num_pages }}
-          </a>
-        </li>
-      {% endif %}
-    </ul>
-  </nav>
-  {% endif %}
+        <ul class="pagination-list">
+            {% if page_obj.number > 1 %}
+                <li>
+                    <a class="pagination-link"
+                       href="?page=1{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}"
+                       aria-label="Goto page 1">1</a>
+                </li>
+            {% endif %}
+            {% if page_obj.number  > 2 %}
+                {% if page_obj.number > 3 %}
+                    <li>
+                        <span class="pagination-ellipsis">&hellip;</span>
+                    </li>
+                    <li>
+                        <a class="pagination-link"
+                           href="?page={{ page_obj.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}"
+                           aria-label="Goto page {{ page_obj.previous_page_number }}">
+                            {{ page_obj.previous_page_number }}
+                        </a>
+                    </li>
+                {% else %}
+                    <li>
+                        <a class="pagination-link"
+                           href="?page={{ page_obj.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}"
+                           aria-label="Goto page {{ page_obj.previous_page_number }}">
+                            {{ page_obj.previous_page_number }}
+                        </a>
+                    </li>
+                {% endif %}
+            {% endif %}
+            <li>
+                <a class="pagination-link is-current"
+                   aria-label="Page {{ page_obj.number }}"
+                   aria-current="page">{{ page_obj.number }}</a>
+            </li>
+            {% if page_obj.next_page_number < paginator.num_pages %}
+                {% if page_obj.next_page_number < paginator.num_pages|add:'-1' %}
+                    <li>
+                        <a class="pagination-link"
+                           href="?page={{ page_obj.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}"
+                           aria-label="Goto page {{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+                    </li>
+                    <li>
+                        <span class="pagination-ellipsis">&hellip;</span>
+                    </li>
+                {% else %}
+                    <li>
+                        <a class="pagination-link"
+                           href="?page={{ page_obj.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}"
+                           aria-label="Goto page {{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+                    </li>
+                {% endif %}
+            {% endif %}
+            {% if page_obj.number < paginator.num_pages %}
+                <li>
+                    <a class="pagination-link"
+                       href="?page={{ paginator.num_pages }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}"
+                       aria-label="Goto page {{ paginator.num_pages }}">{{ paginator.num_pages }}</a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
+{% endif %}
