--- a/templates/django/forms/widgets/clearable_file_input.html
+++ b/templates/django/forms/widgets/clearable_file_input.html
@@ -1,52 +1,56 @@
 {% if widget.is_initial %}
-  <div class="field is-grouped">
-    <div class="control">
-      <label>{{ widget.initial_text }}:</label>
-      <a href="{{ widget.value.url }}">{{ widget.value }}</a>
+    <div class="field is-grouped">
+        <div class="control">
+            <label>{{ widget.initial_text }}:</label>
+            <a href="{{ widget.value.url }}">{{ widget.value }}</a>
+        </div>
+        {% if not widget.required %}
+            <div class="control">
+                <label class="checkbox">
+                    <input type="checkbox"
+                           name="{{ widget.checkbox_name }}"
+                           id="{{ widget.checkbox_id }}">
+                    {{ widget.clear_checkbox_label }}
+                </label>
+            </div>
+        {% endif %}
     </div>
-    {% if not widget.required %}
-    <div class="control">
-      <label class="checkbox">
-        <input type="checkbox" name="{{ widget.checkbox_name }}" id="{{ widget.checkbox_id }}">
-        {{ widget.clear_checkbox_label }}
-      </label>
+    <div class="field is-grouped">
+        <div class="control">
+            <label>{{ widget.input_text }}:</label>
+        </div>
+        <div class="control">
+            <div class="file has-name">
+                <label class="file-label">
+                    <input class="file-input"
+                           type="{{ widget.type }}"
+                           name="{{ widget.name }}"
+                           {% include "django/forms/widgets/attrs.html" %}>
+                    <span class="file-cta">
+                        <span class="file-icon">
+                            <i class="fas fa-upload"></i>
+                        </span>
+                        <span class="file-label">Choose a file…</span>
+                    </span>
+                    <span class="file-name" id="filename"></span>
+                </label>
+            </div>
+        </div>
     </div>
-    {% endif %}
-  </div>
-  <div class="field is-grouped">
-    <div class="control">
-      <label>{{ widget.input_text }}:</label>
-    </div>
-    <div class="control">
-      <div class="file has-name">
-        <label class="file-label">
-        <input class="file-input" type="{{ widget.type }}" name="{{ widget.name }}" {% include "django/forms/widgets/attrs.html" %}>
-        <span class="file-cta">
-          <span class="file-icon">
-            <i class="fas fa-upload"></i>
-          </span>
-          <span class="file-label">
-            Choose a file…
-          </span>
-        </span>
-        <span class="file-name" id="filename"></span>
-        </label>
-      </div>
-    </div>
-  </div>
 {% else %}
-  <div class="file has-name">
-    <label class="file-label">
-      <input class="file-input" type="{{ widget.type }}" name="{{ widget.name }}" {% include "django/forms/widgets/attrs.html" %}>
-      <span class="file-cta">
-        <span class="file-icon">
-          <i class="fas fa-upload"></i>
-        </span>
-        <span class="file-label">
-          Choose a file…
-        </span>
-      </span>
-      <span class="file-name" id="filename"></span>
-    </label>
-  </div>
+    <div class="file has-name">
+        <label class="file-label">
+            <input class="file-input"
+                   type="{{ widget.type }}"
+                   name="{{ widget.name }}"
+                   {% include "django/forms/widgets/attrs.html" %}>
+            <span class="file-cta">
+                <span class="file-icon">
+                    <i class="fas fa-upload"></i>
+                </span>
+                <span class="file-label">Choose a file…</span>
+            </span>
+            <span class="file-name" id="filename"></span>
+        </label>
+    </div>
 {% endif %}
