--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,141 +1,152 @@
 {% load static %}
 {% load thumbnail %}
 {% load flatpages %}
-<nav class="navbar is-link is-fixed-top" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
-    <a id="navbar-banner" class="navbar-item" href="{% url 'home' %}">
-      <img src="{% static 'site/img/metron.svg' %}" alt="Logo">
-    </a>
-    <span class="navbar-burger burger" data-target="navMenu">
-      <span></span>
-      <span></span>
-      <span></span>
-    </span>
-  </div>
-  <div id="navMenu" class="navbar-menu">
-    <div class="navbar-start">
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">Releases</a>
-        <div class="navbar-dropdown">
-          <a class="navbar-item" href="{% url 'issue:thisweek' %}">
-            <span class="icon"><i class="fas fa-star"></i></span>
-            <span>This Week</span>
-          </a>
-          <a class="navbar-item" href="{% url 'issue:nextweek' %}">
-            <span class="icon"><i class="fas fa-bolt"></i></span>
-            <span>Next Week</span>
-          </a>
-          <a class="navbar-item" href="{% url 'issue:future' %}">
-            <span class="icon"><i class="fas fa-gem"></i></span>
-            <span>Future</span>
-          </a>
+<nav class="navbar is-link is-fixed-top"
+     role="navigation"
+     aria-label="main navigation">
+    <div class="navbar-brand">
+        <a id="navbar-banner" class="navbar-item" href="{% url 'home' %}">
+            <img src="{% static 'site/img/metron.svg' %}" alt="Logo">
+        </a>
+        <span class="navbar-burger burger" data-target="navMenu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </span>
+    </div>
+    <div id="navMenu" class="navbar-menu">
+        <div class="navbar-start">
+            <div class="navbar-item has-dropdown is-hoverable">
+                <a class="navbar-link">Releases</a>
+                <div class="navbar-dropdown">
+                    <a class="navbar-item" href="{% url 'issue:thisweek' %}">
+                        <span class="icon"><i class="fas fa-star"></i></span>
+                        <span>This Week</span>
+                    </a>
+                    <a class="navbar-item" href="{% url 'issue:nextweek' %}">
+                        <span class="icon"><i class="fas fa-bolt"></i></span>
+                        <span>Next Week</span>
+                    </a>
+                    <a class="navbar-item" href="{% url 'issue:future' %}">
+                        <span class="icon"><i class="fas fa-gem"></i></span>
+                        <span>Future</span>
+                    </a>
+                </div>
+            </div>
+            <div class="navbar-item has-dropdown is-hoverable">
+                <a class="navbar-link">Browse</a>
+                <div class="navbar-dropdown">
+                    <a class="navbar-item" href="{% url 'publisher:list' %}">
+                        <span class="icon"><i class="fas fa-building"></i></span>
+                        <span>Publishers</span>
+                    </a>
+                    <a class="navbar-item" href="{% url 'imprint:list' %}">
+                        <span class="icon"><i class="fas fa-stamp"></i></span>
+                        <span>Imprints</span>
+                    </a>
+                    <a class="navbar-item" href="{% url 'series:list' %}">
+                        <span class="icon"><i class="fas fa-archive"></i></span>
+                        <span>Series</span>
+                    </a>
+                    <a class="navbar-item" href="{% url 'issue:list' %}">
+                        <span class="icon"><i class="fas fa-book"></i></span>
+                        <span>Issues</span>
+                    </a>
+                    <a class="navbar-item" href="{% url 'creator:list' %}">
+                        <span class="icon"><i class="fas fa-user-edit"></i></span>
+                        <span>Creators</span>
+                    </a>
+                    <a class="navbar-item" href="{% url 'character:list' %}">
+                        <span class="icon"><i class="fas fa-user-astronaut"></i></span>
+                        <span>Characters</span>
+                    </a>
+                    <a class="navbar-item" href="{% url 'arc:list' %}">
+                        <span class="icon"><i class="fas fa-lightbulb"></i></span>
+                        <span>Story Arcs</span>
+                    </a>
+                    <a class="navbar-item" href="{% url 'team:list' %}">
+                        <span class="icon"><i class="fas fa-users"></i></span>
+                        <span>Teams</span>
+                    </a>
+                    <a class="navbar-item" href="{% url 'universe:list' %}">
+                        <span class="icon"><i class="fas fa-globe-americas"></i></span>
+                        <span>Universes</span>
+                    </a>
+                </div>
+            </div>
+            <div class="navbar-item has-dropdown is-hoverable">
+                <a class="navbar-link">More</a>
+                <div class="navbar-dropdown">
+                    <a class="navbar-item" href="{% url 'flatpage:editing-guidelines' %}">
+                        <span class="icon"><i class="fas fa-edit"></i></span>
+                        <span>Editing Guidelines</span>
+                    </a>
+                    <a class="navbar-item" href="{% url 'flatpage:api-guidelines' %}">
+                        <span class="icon"><i class="fas fa-satellite"></i></span>
+                        <span>API Guidelines</span>
+                    </a>
+                    {% if user.is_authenticated %}
+                        <a class="navbar-item" href="/docs/">
+                            <span class="icon"><i class="fas fa-file"></i></span>
+                            <span>API Docs</span>
+                        </a>
+                    {% endif %}
+                    <a class="navbar-item" href="{% url 'flatpage:privacy' %}">
+                        <span class="icon"><i class="fas fa-user-secret"></i></span>
+                        <span>Privacy Policy</span>
+                    </a>
+                    <a class="navbar-item" href="{% url 'statistics' %}">
+                        <span class="icon"><i class="fas fa-chart-bar"></i></span>
+                        <span>Statistics</span>
+                    </a>
+                    <a class="navbar-item"
+                       href="https://metron-project.github.io/blog"
+                       target="_blank">
+                        <span class="icon"><i class="fas fa-blog"></i></span>
+                        <span>Blog</span>
+                    </a>
+                    <hr class="navbar-divider">
+                    <a class="navbar-item"
+                       href="https://github.com/bpepple/metron/issues/new/choose">
+                        <span class="icon"><i class="fas fa-bug"></i></span>
+                        <span>Report an issue</span>
+                    </a>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">Browse</a>
-        <div class="navbar-dropdown">
-          <a class="navbar-item" href="{% url 'publisher:list' %}">
-            <span class="icon"><i class="fas fa-building"></i></span>
-            <span>Publishers</span>
-          </a>
-          <a class="navbar-item" href="{% url 'imprint:list' %}">
-            <span class="icon"><i class="fas fa-stamp"></i></span>
-            <span>Imprints</span>
-          </a>
-          <a class="navbar-item" href="{% url 'series:list' %}">
-            <span class="icon"><i class="fas fa-archive"></i></span>
-            <span>Series</span>
-          </a>
-          <a class="navbar-item" href="{% url 'issue:list' %}">
-            <span class="icon"><i class="fas fa-book"></i></span>
-            <span>Issues</span>
-          </a>
-          <a class="navbar-item" href="{% url 'creator:list' %}">
-            <span class="icon"><i class="fas fa-user-edit"></i></span>
-            <span>Creators</span>
-          </a>
-          <a class="navbar-item" href="{% url 'character:list' %}">
-            <span class="icon"><i class="fas fa-user-astronaut"></i></span>
-            <span>Characters</span>
-          </a>
-          <a class="navbar-item" href="{% url 'arc:list' %}">
-            <span class="icon"><i class="fas fa-lightbulb"></i></span>
-            <span>Story Arcs</span>
-          </a>
-          <a class="navbar-item" href="{% url 'team:list' %}">
-            <span class="icon"><i class="fas fa-users"></i></span>
-            <span>Teams</span>
-          </a>
-          <a class="navbar-item" href="{% url 'universe:list' %}">
-            <span class="icon"><i class="fas fa-globe-americas"></i></span>
-            <span>Universes</span>
-          </a>
-        </div>
-      </div>
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">More</a>
-        <div class="navbar-dropdown">
-          <a class="navbar-item" href="{% url 'flatpage:editing-guidelines' %}">
-            <span class="icon"><i class="fas fa-edit"></i></span>
-            <span>Editing Guidelines</span>
-          </a>
-          <a class="navbar-item" href="{% url 'flatpage:api-guidelines' %}">
-            <span class="icon"><i class="fas fa-satellite"></i></span>
-            <span>API Guidelines</span>
-          </a>
-          {% if user.is_authenticated %}
-            <a class="navbar-item" href="/docs/">
-              <span class="icon"><i class="fas fa-file"></i></span>
-              <span>API Docs</span>
+        <div class="navbar-end">
+            <a class="navbar-item"
+               href="https://metron-project.github.io"
+               target="_blank">
+                <span class="icon"><i class="fab fa-lg fa-github"></i></span>
             </a>
-          {% endif %}
-          <a class="navbar-item" href="{% url 'flatpage:privacy' %}">
-            <span class="icon"><i class="fas fa-user-secret"></i></span>
-            <span>Privacy Policy</span>
-          </a>
-          <a class="navbar-item" href="{% url 'statistics' %}">
-            <span class="icon"><i class="fas fa-chart-bar"></i></span>
-            <span>Statistics</span>
-          </a>
-          <a class="navbar-item" href="https://metron-project.github.io/blog" target="_blank">
-            <span class="icon"><i class="fas fa-blog"></i></span>
-            <span>Blog</span>
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item" href="https://github.com/bpepple/metron/issues/new/choose">
-            <span class="icon"><i class="fas fa-bug"></i></span>
-            <span>Report an issue</span>
-          </a>
+            <a class="navbar-item"
+               rel="me"
+               href="https://mastodon.social/@metron"
+               target="_blank">
+                <span class="icon"><i class="fab fa-lg fa-mastodon"></i></span>
+            </a>
+            <div class="navbar-end">
+                {% if user.is_authenticated %}
+                    <a class="navbar-item" href="{% url 'change_profile' %}">Account</a>
+                {% endif %}
+                <div class="navbar-item">
+                    <div class="buttons">
+                        {% if user.is_authenticated %}
+                            <form>
+                                {% csrf_token %}
+                                <button class="button is-light"
+                                        formmethod="post"
+                                        formaction="{% url 'logout' %}"
+                                        type="submit">Log out</button>
+                            </form>
+                        {% else %}
+                            <a class="button is-primary" href="{% url 'signup' %}"><strong>Sign up</strong></a>
+                            <a class="button is-light" href="{% url 'login' %}">Log in</a>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-    <div class="navbar-end">
-      <a class="navbar-item" href="https://metron-project.github.io" target="_blank">
-        <span class="icon"><i class="fab fa-lg fa-github"></i></span>
-      </a>
-      <a class="navbar-item" rel="me" href="https://mastodon.social/@metron" target="_blank">
-        <span class="icon"><i class="fab fa-lg fa-mastodon"></i></span>
-      </a>
-      <div class="navbar-end">
-        {% if user.is_authenticated %}
-          <a class="navbar-item" href="{% url 'change_profile' %}">Account</a>
-        {% endif %}
-        <div class="navbar-item">
-          <div class="buttons">
-            {% if user.is_authenticated %}
-              <form>
-                {% csrf_token %}
-                <button class="button is-light" formmethod="post" formaction="{% url 'logout' %}" type="submit">
-                  Log out
-                </button>
-              </form>
-            {% else %}
-              <a class="button is-primary" href="{% url 'signup' %}"><strong>Sign up</strong></a>
-              <a class="button is-light" href="{% url 'login' %}">Log in</a>
-            {% endif %}
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </nav>
