--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,38 +1,34 @@
 {% extends "base.html" %}
 {% load bulma_tags %}
-
-{% block page-title %}Login Form{% endblock page-title %}
-
+{% block page-title %}
+    Login Form
+{% endblock page-title %}
 {% block content %}
-  <div class="container">
-    <h1 class="title">Login</h1>
-    <form method="post">
-      {% csrf_token %}
-      {% for field in form.visible_fields %}
-        <div class="field" data-field-name="{{ field.name }}">
-          <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
-                 for="{{ field.id_for_label }}">{{ field.label }}</label>
-          <div class="control">
-            {{ field|add_field_class:'input' }}
-            {% for error in field.errors %}
-              <span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>
+    <div class="container">
+        <h1 class="title">Login</h1>
+        <form method="post">
+            {% csrf_token %}
+            {% for field in form.visible_fields %}
+                <div class="field" data-field-name="{{ field.name }}">
+                    <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
+                           for="{{ field.id_for_label }}">{{ field.label }}</label>
+                    <div class="control">
+                        {{ field|add_field_class:'input' }}
+                        {% for error in field.errors %}<span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>{% endfor %}
+                        {% if field.help_text %}<p class="help">{{ field.help_text|safe }}</p>{% endif %}
+                    </div>
+                </div>
             {% endfor %}
-            {% if field.help_text %}
-              <p class="help">
-                {{ field.help_text|safe }}
-              </p>
-            {% endif %}
-          </div>
-        </div>
-      {% endfor %}
-      <div class="field">
-        <div class="control">
-          <button class="button is-link" type="submit">Login</button>
-        </div>
-      </div>
-      <div class="field">
-        <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-      </div>
-    </form>
-  </div>
+            <div class="field">
+                <div class="control">
+                    <button class="button is-link" type="submit">Login</button>
+                </div>
+            </div>
+            <div class="field">
+                <p>
+                    <a href="{% url 'password_reset' %}">Lost password?</a>
+                </p>
+            </div>
+        </form>
+    </div>
 {% endblock %}
