--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
-
 {% block title %}Password reset complete{% endblock %}
-
 {% block content %}
-  <section class="section">
-    <div class="container">
-      <h1 class="title">Password reset complete</h1>
-      <p class="subtitle">Your new password has been set. You can log in now on the
-        <a href="{% url 'login' %}">log in page</a>.
-      </p>
-    </div>
-  </section>
+    <section class="section">
+        <div class="container">
+            <h1 class="title">Password reset complete</h1>
+            <p class="subtitle">
+                Your new password has been set. You can log in now on the
+                <a href="{% url 'login' %}">log in page</a>.
+            </p>
+        </div>
+    </section>
 {% endblock %}
