--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,33 +1,29 @@
 {% extends "base.html" %}
 {% load bulma_tags %}
-
-{% block page-title %}Password Reset Form{% endblock page-title %}
-
+{% block page-title %}
+    Password Reset Form
+{% endblock page-title %}
 {% block content %}
-  <div class="container">
-    <h1 class="title">Forgot your password?</h1>
-    <p class="subtitle">Enter your email address below, and we'll email instructions for setting a new one.</p>
-    <form method="POST">
-      {% csrf_token %}
-      <div class="field" data-field-name="email">
-        <label class="label {{ form.required_css_class }}" for="email">Email</label>
-        <div class="control">
-          {{ form.email|add_field_class:'input' }}
-          {% for error in form.email.errors %}
-            <span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>
-          {% endfor %}
-          {% if form.email.help_text %}
-            <p class="help">
-              {{ form.email.help_text|safe }}
-            </p>
-          {% endif %}
-        </div>
-      </div>
-      <div class="field">
-        <div class="control">
-          <button class="button is-link" type="submit">Send me instructions!</button>
-        </div>
-      </div>
-    </form>
-  </div>
+    <div class="container">
+        <h1 class="title">Forgot your password?</h1>
+        <p class="subtitle">Enter your email address below, and we'll email instructions for setting a new one.</p>
+        <form method="POST">
+            {% csrf_token %}
+            <div class="field" data-field-name="email">
+                <label class="label {{ form.required_css_class }}" for="email">Email</label>
+                <div class="control">
+                    {{ form.email|add_field_class:'input' }}
+                    {% for error in form.email.errors %}
+                        <span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>
+                    {% endfor %}
+                    {% if form.email.help_text %}<p class="help">{{ form.email.help_text|safe }}</p>{% endif %}
+                </div>
+            </div>
+            <div class="field">
+                <div class="control">
+                    <button class="button is-link" type="submit">Send me instructions!</button>
+                </div>
+            </div>
+        </form>
+    </div>
 {% endblock %}
